added db migrations and ci checks
